# pypopRF

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  structure_of_project.txt
.github/workflows/: docs.yml
docs/: conf.py  examples.rst  index.rst  installation.rst  make.bat  update_docs.py  usage.rst
docs/_build/doctrees/: environment.pickle  examples.doctree  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt
docs/_static/: custom.css
docs/api/: core.rst
docs/source/: conf.py  index.rst
docs/source/examples/: basic.rst
src/popupy/: __init__.py
src/popupy/cli/: main.py
src/popupy/config/: settings.py
src/popupy/core/: dasymetric.py  feature_extraction.py  model.py
src/popupy/utils/: config_utils.py  joblib_manager.py  matplotlib_utils.py  raster.py  vector.py  visualization.py
src/pypoprf/: __init__.py
src/pypoprf/cli/: main.py
src/pypoprf/config/: settings.py
src/pypoprf/core/: dasymetric.py  feature_extraction.py  model.py
src/pypoprf/utils/: config_utils.py  joblib_manager.py  logger.py  matplotlib_utils.py  raster.py  raster_processing.py  vector.py  visualization.py
test_data/data/: test_admin3.gpkg  test_admin3_agesex.csv  test_constrain.tif  test_mask.tif
test_project/: config.yaml
test_project/data/: test_admin3.csv  test_buildingCount.tif  test_mastergrid.tif
test_project/output/: dasymetric.tif  features.csv  normalized_census.tif
tests/: conftest.py
tests/config/: test_settings.py
tests/core/: test_dasymetric.py  test_feature_extraction.py  test_model.py
tests/utils/: test_config_utils.py  test_joblib_manager.py  test_matplotlib_utils.py  test_raster.py
